Use mail_admins when sending emails to admins, also, add some configuration stuff for the emails

--- a/comicagg/settings_local.py.sample
+++ b/comicagg/settings_local.py.sample
@@ -7,7 +7,7 @@ TEMPLATE_DEBUG = DEBUG
 MAINTENANCE = False
 
 ADMINS = (
-    ('esú', 'admin@comicagg.com'),
+    ('name', 'email'),
 )
 
 MANAGERS = ADMINS
@@ -44,18 +44,16 @@ ADMIN_MEDIA_PREFIX = 'http://mizar-lan/admin-media/'
 #used for password reset email
 DOMAIN = 'http://localhost:8000'
 
-#THEME = 'v2010'
-
 TEMPLATE_DIRS = (
     # Put strings here, like "/home/html/django_templates" or "C:/www/django/templates".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
     '%scomicagg/templates' % ROOT,
-#    '%scomicagg/templates/base' % ROOT,
-#    '%scomicagg/templates/%s' % (ROOT, THEME),
 )
 
 EMAIL_HOST = ''
 EMAIL_HOST_USER = ''
 EMAIL_HOST_PASSWORD = ''
 DEFAULT_FROM_EMAIL = ''
+SERVER_EMAIL = DEFAULT_FROM_EMAIL
+EMAIL_SUBJECT_PREFIX=''
