Changed how the directory is specified in the configuration, no need for manual configuration now

--- a/comicagg/settings_local.py.sample
+++ b/comicagg/settings_local.py.sample
@@ -1,6 +1,8 @@
 # -*- coding: utf-8 -*-
 # Django settings for comicagg project.
 
+import os
+
 DEBUG = False
 TEMPLATE_DEBUG = DEBUG
 
@@ -41,12 +43,11 @@ LANGUAGE_CODE = 'en'
 USE_I18N = True
 
 # Absolute path to the directory that holds the comicagg folder
-# Example: "/home/media/media.lawrence.com/"
-ROOT = '/home/esu/dev/comicagg-v2010/'
+ROOT = os.path.dirname(os.path.abspath(__file__)) + '/'
 
 # Absolute path to the directory that holds media.
 # Example: "/home/media/media.lawrence.com/"
-MEDIA_ROOT = '%scomicagg/media' % ROOT
+MEDIA_ROOT = '%smedia' % ROOT
 
 # URL that handles the media served from MEDIA_ROOT. Make sure to use a
 # trailing slash if there is a path component (optional in other cases).
@@ -65,7 +66,7 @@ TEMPLATE_DIRS = (
     # Put strings here, like "/home/html/django_templates" or "C:/www/django/templates".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
-    '%scomicagg/templates' % ROOT,
+    '%stemplates' % ROOT,
 )
 
 #For SMTP email sending
