--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,6 +11,9 @@ services:
 
     environment:
       - PYTHONPATH=/workspaces/comicagg.git/src:/workspaces/comicagg.git/lib
+    
+    env_file:
+      - dev.env
 
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
