--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,11 @@
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
     "python.formatting.provider": "none",
-    "python.analysis.autoImportCompletions": true
+    "python.analysis.autoImportCompletions": true,
+    "python.analysis.typeCheckingMode": "basic",
+    "coblock.boxCharacter": "#",
+    "coblock.boxWidth": 1,
+    "coblock.numBlankLines": 1,
+    "coblock.spaceAround": 3,
+    "coblock.preferBlockComment": true
 }
