Add pgadmin4 container. Env file for all containers

--- a/.devcontainer/dev.env
+++ b/.devcontainer/dev.env
@@ -15,3 +15,12 @@ DJANGO_SERVER_EMAIL=robot@comicagg.com
 DJANGO_LOGS_DIR=/tmp/log/comicagg
 DJANGO_SITE_DOMAIN=comicagg.com
 CELERY_BROKER_URL=redis://redis:6379
+
+POSTGRES_USER=comicagg
+POSTGRES_DB=comicagg
+POSTGRES_PASSWORD=comicagg
+
+PGADMIN_DEFAULT_EMAIL=admin@comicagg.com
+PGADMIN_DEFAULT_PASSWORD=admin
+PGADMIN_DISABLE_POSTFIX=1
+PGADMIN_LISTEN_PORT=8080
