--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -5,21 +5,17 @@ services:
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
-
     volumes:
       - ../..:/workspaces:cached
-
     environment:
       - PYTHONPATH=/workspaces/comicagg.git/src:/workspaces/comicagg.git/lib
-    
     env_file:
       - dev.env
-
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
+    # network_mode: service:db
 
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
@@ -32,15 +28,22 @@ services:
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: comicagg
-      POSTGRES_DB: comicagg
-      POSTGRES_PASSWORD: comicagg
+    env_file:
+      - dev.env
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
+    ports:
+      - 5432:5432
 
   redis:
     image: redis:7-alpine
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    env_file:
+      - dev.env
+    ports:
+      - 8080:8080
 
 volumes:
   postgres-data:
