--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -32,8 +32,8 @@ services:
       - dev.env
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
-    ports:
-      - 5432:5432
+    # ports:
+    #   - 5432:5432
 
   redis:
     image: redis:7-alpine
