Refactor. Fix broken images system.

--- a/.devcontainer/dev.env
+++ b/.devcontainer/dev.env
@@ -4,8 +4,8 @@ DJANGO_SECRET_KEY=0zqsc45e!e*%zy(&gus5p4bj6^mdrt%7^y*fl*(o6rt1yp=)&#
 DJANGO_ADMINS=Admin <admin@comicagg.com>
 DJANGO_MANAGERS=Admin <admin@comicagg.com>
 DJANGO_DATABASE=psycopg2://comicagg:comicagg@db:5432/comicagg
+DJANGO_MEDIA_ROOT=/tmp/
 DJANGO_MEDIA_URL=/media/
-DJANGO_ADMIN_MEDIA_PREFIX=/admin-media/
 DJANGO_STATIC_URL=/static/
 DJANGO_STATIC_ROOT=/tmp/static/
 DJANGO_ALLOWED_HOSTS=localhost
