Added todo-tree extension to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,7 @@
 				"tal7aouy.indent-colorizer",
 				"ms-python.black-formatter",
 				"jgclark.vscode-todo-highlight",
+				"Gruntfuggly.todo-tree",
 				"tushortz.python-extended-snippets",
 				"ms-python.isort",
 				"twixes.pypi-assistant",
