Rewrite accounts views as CBV. Create validators.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,9 @@
 				"ms-azuretools.vscode-docker",
 				"DavidAnson.vscode-markdownlint",
 				"vict0rsch.coblock",
-				"sourcery.sourcery"
+				"sourcery.sourcery",
+				"thebarkman.vscode-djaneiro",
+				"mrorz.language-gettext"
 			]
 		}
 	},
