Fix password reset email. Add mailpit to test email

--- a/.devcontainer/dev.env
+++ b/.devcontainer/dev.env
@@ -1,19 +1,25 @@
 DJANGO_DEBUG=1
 DJANGO_MAINTENANCE=0
+
 DJANGO_SECRET_KEY=0zqsc45e!e*%zy(&gus5p4bj6^mdrt%7^y*fl*(o6rt1yp=)&#
-DJANGO_ADMINS=Admin <admin@comicagg.com>
-DJANGO_MANAGERS=Admin <admin@comicagg.com>
 DJANGO_DATABASE=psycopg2://comicagg:comicagg@db:5432/comicagg
+
 DJANGO_MEDIA_ROOT=/tmp/
 DJANGO_MEDIA_URL=/media/
 DJANGO_STATIC_URL=/static/
 DJANGO_STATIC_ROOT=/tmp/static/
+
 DJANGO_ALLOWED_HOSTS=localhost
-DJANGO_EMAIL_HOST=//comicagg:comicagg@smtp
+DJANGO_SITE_DOMAIN=comicagg.com
+
+DJANGO_EMAIL_HOST=//comicagg:comicagg@mail:1025
+DJANGO_ADMINS=Admin <admin@comicagg.com>
+DJANGO_MANAGERS=Admin <admin@comicagg.com>
 DJANGO_DEFAULT_FROM_EMAIL=robot@comicagg.com
 DJANGO_SERVER_EMAIL=robot@comicagg.com
+
 DJANGO_LOGS_DIR=/tmp/log/comicagg
-DJANGO_SITE_DOMAIN=comicagg.com
+
 CELERY_BROKER_URL=redis://redis:6379
 
 POSTGRES_USER=comicagg
@@ -24,3 +30,7 @@ PGADMIN_DEFAULT_EMAIL=admin@comicagg.com
 PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_DISABLE_POSTFIX=1
 PGADMIN_LISTEN_PORT=8080
+
+MP_SMTP_AUTH_ACCEPT_ANY=1
+MP_SMTP_AUTH_ALLOW_INSECURE=1
+MP_UI_AUTH=comicagg:comicagg
