--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -45,5 +45,17 @@ services:
     ports:
       - 8080:8080
 
+  mail:
+    image: axllent/mailpit:latest
+    restart: unless-stopped
+    volumes:
+      - mailpit-data:/data/
+    env_file:
+      - dev.env
+    ports:
+      - 8025:8025
+      - 1025:1025
+
 volumes:
   postgres-data:
+  mailpit-data:
