Reorg .env files

--- a/deployment/.env
+++ b/deployment/.env
@@ -1,24 +1,24 @@
-DJANGO_DEBUG=1
-DJANGO_MAINTENANCE=1
-DJANGO_SECRET_KEY=0zqsc45e!e*%zy(&gus5p4bj6^mdrt%7^y*fl*(o6rt1yp=)&#
+DJANGO_DEBUG=0
+DJANGO_MAINTENANCE=0
 
-DJANGO_ADMINS=Admin <admin@comicagg.com>
-DJANGO_MANAGERS=Admin <admin@comicagg.com>
+DJANGO_SECRET_KEY=0zqsc45e!e*%zy(&gus5p4bj6^mdrt%7^y*fl*(o6rt1yp=)&#
 DJANGO_DATABASE=psycopg2://comicagg:comicagg@db:5432/comicagg
 
 DJANGO_MEDIA_ROOT=/web/media/
 DJANGO_MEDIA_URL=/.media/
 DJANGO_STATIC_ROOT=/web/static/
 DJANGO_STATIC_URL=/.static/
-DJANGO_ALLOWED_HOSTS=localhost
+
+DJANGO_ALLOWED_HOSTS=www.comicagg.com
+DJANGO_SITE_DOMAIN=https://www.comicagg.com
 
 DJANGO_EMAIL_HOST=//comicagg:comicagg@smtp
+DJANGO_ADMINS=Admin <admin@comicagg.com>
+DJANGO_MANAGERS=Admin <admin@comicagg.com>
 DJANGO_DEFAULT_FROM_EMAIL=robot@comicagg.com
 DJANGO_SERVER_EMAIL=robot@comicagg.com
 
 DJANGO_LOGS_DIR=/tmp/log/comicagg
-
-DJANGO_SITE_DOMAIN=comicagg.com
 
 CELERY_BROKER_URL=redis://redis:6379
 
