--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,14 +1,15 @@
-Django==4.2.6
+Django==4.2.7
 psycopg[binary]==3.1.12
 requests==2.31.0
 gunicorn==21.2.0
 
 # Scheduled tasks
 redis==5.0.1
-celery==5.3.4
+celery==5.3.5
 django-celery-beat==2.5.0
 django_celery_results==2.5.1
 flower==2.0.1
+django-mailer==2.3
 
 # Development only
-pylint-django==2.5.3
+pylint-django==2.5.5
