--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,9 +43,9 @@
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// ,"remoteUser": "root"
+	"remoteUser": "root",
 	"mounts": [
-        "source=profile,target=/root,type=volume",
-        "target=/root/.vscode-server,type=volume"
-    ]
+		"source=profile,target=/root,type=volume",
+		"target=/root/.vscode-server,type=volume"
+	]
 }
