--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - db
 
   db:
-    image: postgres:16
+    image: postgres:16-alpine
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
@@ -43,7 +43,7 @@ services:
     env_file:
       - dev.env
     ports:
-      - 8080:8080
+      - 8081:8081
 
   mail:
     image: axllent/mailpit:latest
