Add deployment and migration steps. Closes #29

--- a/deployment/.env
+++ b/deployment/.env
@@ -1,3 +1,4 @@
+# This is just an example of all the environment variables needed
 DJANGO_DEBUG=0
 DJANGO_MAINTENANCE=0
 
@@ -9,7 +10,7 @@ DJANGO_MEDIA_URL=/.media/
 DJANGO_STATIC_ROOT=/web/static/
 DJANGO_STATIC_URL=/.static/
 
-DJANGO_ALLOWED_HOSTS=www.comicagg.com
+DJANGO_ALLOWED_HOSTS=www.comicagg.com,localhost
 DJANGO_SITE_DOMAIN=https://www.comicagg.com
 
 DJANGO_EMAIL_HOST=//comicagg:comicagg@smtp
@@ -27,6 +28,6 @@ POSTGRES_USER=comicagg
 POSTGRES_PASSWORD=comicagg
 
 PGADMIN_DEFAULT_EMAIL=admin@comicagg.com
-PGADMIN_DEFAULT_PASSWORD=admin
+PGADMIN_DEFAULT_PASSWORD=hW(~%5&<-9[r+c{eES4wCu
 PGADMIN_DISABLE_POSTFIX=1
 PGADMIN_LISTEN_PORT=8080
