--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,6 @@
 Django==4.2.7
-psycopg[binary]==3.1.12
+# This one is baked into the image. No need to install it with pip.
+# psycopg[c]==3.1.17
 requests==2.31.0
 gunicorn==21.2.0
 
