EMAIL_USE_TLS read from env file

--- a/.devcontainer/dev.env
+++ b/.devcontainer/dev.env
@@ -13,17 +13,18 @@ DJANGO_ALLOWED_HOSTS=localhost
 DJANGO_SITE_DOMAIN=http://localhost:8001
 
 DJANGO_EMAIL_HOST=//comicagg:comicagg@mail:1025
-DJANGO_ADMINS=Admin <admin@comicagg.com>
-DJANGO_MANAGERS=Admin <admin@comicagg.com>
+DJANGO_EMAIL_USE_TLS=0
 DJANGO_DEFAULT_FROM_EMAIL=robot@comicagg.com
 DJANGO_SERVER_EMAIL=robot@comicagg.com
+DJANGO_ADMINS=Admin <admin@comicagg.com>
+DJANGO_MANAGERS=Admin <admin@comicagg.com>
 
 DJANGO_LOGS_DIR=/tmp/log/comicagg
 
 CELERY_BROKER_URL=redis://redis:6379
 
-POSTGRES_USER=comicagg
 POSTGRES_DB=comicagg
+POSTGRES_USER=comicagg
 POSTGRES_PASSWORD=comicagg
 
 PGADMIN_DEFAULT_EMAIL=admin@comicagg.com
