--- a/deployment/.env
+++ b/deployment/.env
@@ -14,10 +14,11 @@ DJANGO_ALLOWED_HOSTS=www.comicagg.com,localhost
 DJANGO_SITE_DOMAIN=https://www.comicagg.com
 
 DJANGO_EMAIL_HOST=//comicagg:comicagg@smtp
-DJANGO_ADMINS=Admin <admin@comicagg.com>
-DJANGO_MANAGERS=Admin <admin@comicagg.com>
+DJANGO_EMAIL_USE_TLS=1
 DJANGO_DEFAULT_FROM_EMAIL=robot@comicagg.com
 DJANGO_SERVER_EMAIL=robot@comicagg.com
+DJANGO_ADMINS=Admin <admin@comicagg.com>
+DJANGO_MANAGERS=Admin <admin@comicagg.com>
 
 DJANGO_LOGS_DIR=/tmp/log/comicagg
 
