--- a/deployment/.env
+++ b/deployment/.env
@@ -11,6 +11,7 @@ DJANGO_STATIC_ROOT=/web/static/
 DJANGO_STATIC_URL=/.static/
 
 DJANGO_ALLOWED_HOSTS=www.comicagg.com,localhost
+DJANGO_CSRF_TRUSTED_ORIGINS=https://www.comicagg.com
 DJANGO_SITE_DOMAIN=https://www.comicagg.com
 
 DJANGO_EMAIL_HOST=//comicagg:comicagg@smtp
