--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,6 +3,8 @@ name: Build Django image
 on:
   push:
     branches: ["development"]
+  workflow_dispatch:
+
 #   pull_request:
 #     branches: [ "development" ]
 
