--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,8 +29,10 @@ jobs:
       - name: Change to src folder
         run: |
           cd src
+          pwd
       - name: Install Dependencies
         run: |
+          pwd
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           mkdir -p $DJANGO_STATIC_ROOT
