--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,9 +11,20 @@ on:
 jobs:
   build:
     env:
-      DJANGO_STATIC_ROOT: /tmp/static/
       DJANGO_SECRET_KEY: this-is-just-for-building
-
+      DJANGO_DATABASE: sqlite3://comicagg:comicagg@db:5432/tmp/comicagg.db
+      DJANGO_MEDIA_ROOT: /web/media/
+      DJANGO_MEDIA_URL: /.media/
+      DJANGO_STATIC_ROOT: /tmp/static/
+      DJANGO_STATIC_URL: /.static/
+      DJANGO_ADMINS: Admin <admin@comicagg.com>
+      DJANGO_MANAGERS: Admin <admin@comicagg.com>
+      DJANGO_EMAIL_HOST: //comicagg:comicagg@smtp
+      DJANGO_DEFAULT_FROM_EMAIL: robot@comicagg.com
+      DJANGO_SERVER_EMAIL: robot@comicagg.com
+      DJANGO_LOGS_DIR: /tmp/log/comicagg
+      DJANGO_SITE_DOMAIN: https://www.comicagg.com
+      CELERY_BROKER_URL: redis://redis:6379
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
