--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,6 +7,11 @@ on:
 #     branches: [ "development" ]
   workflow_dispatch:
 
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: nublar.azurecr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: comicagg/app
 
 jobs:
   build:
@@ -26,6 +31,9 @@ jobs:
       DJANGO_SITE_DOMAIN: https://www.comicagg.com
       CELERY_BROKER_URL: redis://redis:6379
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
     strategy:
       max-parallel: 4
       matrix:
@@ -38,18 +46,52 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install Dependencies
-        working-directory: ./src
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          mkdir -p $DJANGO_STATIC_ROOT
-      - name: Collect static files
-        working-directory: ./src
-        run: |
-          python manage.py collectstatic --noinput
       - name: Run Tests
-        working-directory: ./src
         run: |
           python -Wa manage.py test --noinput --failfast comicagg.comics
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile
+      - name: Collect static files
+        run: |
+          mkdir -p $DJANGO_STATIC_ROOT
+          python manage.py collectstatic --noinput
+      # - name: Build the Docker image
+        # run: docker build . --file Dockerfile
+      # Set up BuildKit Docker container builder to be able to build
+      # multi-platform images and export cache
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+
+      # Login against a Docker registry except on PR
+      # https://github.com/docker/login-action
+      - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      # Extract metadata (tags, labels) for Docker
+      # https://github.com/docker/metadata-action
+      # - name: Extract Docker metadata
+      #   id: meta
+      #   uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
+      #   with:
+      #     images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      # Build and push Docker image with Buildx (don't push on PR)
+      # https://github.com/docker/build-push-action
+      - name: Build and push Docker image
+        id: build-and-push
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          # tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGEN_NAME }}:test
+          # labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
