--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,7 +11,8 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: nublar.azurecr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: comicagg/app
+  APP_APP_IMAGE_NAME: comicagg/app
+  PROXY_IMAGE_NAME: comicagg/proxy
 
 jobs:
   build:
@@ -20,7 +21,7 @@ jobs:
       DJANGO_DATABASE: sqlite3://comicagg:comicagg@db:5432/tmp/comicagg.db
       DJANGO_MEDIA_ROOT: /web/media/
       DJANGO_MEDIA_URL: /.media/
-      DJANGO_STATIC_ROOT: /tmp/static/
+      DJANGO_STATIC_ROOT: /tmp/nginx/static/
       DJANGO_STATIC_URL: /.static/
       DJANGO_ADMINS: Admin <admin@comicagg.com>
       DJANGO_MANAGERS: Admin <admin@comicagg.com>
@@ -52,10 +53,6 @@ jobs:
       - name: Run Tests
         run: |
           python -Wa manage.py test --noinput --failfast comicagg.comics
-      - name: Collect static files
-        run: |
-          mkdir -p $DJANGO_STATIC_ROOT
-          python manage.py collectstatic --noinput
       # - name: Build the Docker image
         # run: docker build . --file Dockerfile
       # Set up BuildKit Docker container builder to be able to build
@@ -80,18 +77,37 @@ jobs:
       #   id: meta
       #   uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
       #   with:
-      #     images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      #     images: ${{ env.REGISTRY }}/${{ env.APP_IMAGE_NAME }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
+      - name: Build and push app image
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           # tags: ${{ steps.meta.outputs.tags }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test
+          tags: ${{ env.REGISTRY }}/${{ env.APP_IMAGE_NAME }}:test
           # labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Collect static files and prepare nginx image
+        run: |
+          mkdir -p $DJANGO_STATIC_ROOT
+          python manage.py collectstatic --noinput
+          cp ../deployment/nginx/* /tmp/nginx/
+      - name: Build and push proxy image
+        id: build-and-push-nginx
+        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        with:
+          context: /tmp/nginx/
+          push: ${{ github.event_name != 'pull_request' }}
+          # tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ env.REGISTRY }}/${{ env.PROXY_IMAGE_NAME }}:test
+          # labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+
+
