--- a/deployment/nginx/Dockerfile
+++ b/deployment/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:alpine
 
-ARG STATIC_DIR=./static
+ARG STATIC_DIR=./static/*
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY comicagg.conf /etc/nginx/conf.d
