--- a/deployment/nginx/Dockerfile
+++ b/deployment/nginx/Dockerfile
@@ -5,4 +5,4 @@ ARG STATIC_DIR=./static/*
 RUN rm /etc/nginx/conf.d/default.conf
 COPY comicagg.conf /etc/nginx/conf.d
 
-COPY ${STATIC_DIR} /web/static
+COPY --chown=nginx:nginx ${STATIC_DIR} /web/static
