--- a/deployment/nginx/Dockerfile
+++ b/deployment/nginx/Dockerfile
@@ -1,8 +1,6 @@
 FROM nginx:alpine
 
-ARG STATIC_DIR=./static
-
 RUN rm /etc/nginx/conf.d/default.conf
 COPY comicagg.conf /etc/nginx/conf.d
 
-COPY --chown=nginx:nginx ${STATIC_DIR} /web/static
+COPY --chown=nginx:nginx ./static /web/static
