--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,6 +13,7 @@ env:
   # github.repository as <account>/<repo>
   APP_IMAGE_NAME: comicagg/app
   PROXY_IMAGE_NAME: comicagg/proxy
+  PYTHON_VERSION: 3.12
 
 jobs:
   build:
@@ -41,11 +42,11 @@ jobs:
         python-version: [3.12]
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
