--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build Django image
+name: ci
 
 on:
   push:
@@ -25,16 +25,3 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          mkdir -p $DJANGO_STATIC_ROOT
-      - name: Collect static files
-        run: |
-          python manage.py collectstatic --noinput
-      - name: Run Tests
-        run: |
-          python manage.py test
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile
