Add tag trigger and tag syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: ci
 on:
   push:
     branches: ["development"]
+    tags: ["v*"]
 #   pull_request:
 #     branches: [ "development" ]
   workflow_dispatch:
@@ -77,10 +78,8 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.APP_IMAGE_NAME }}
-
-      - name: Collect static files and prepare nginx image
-        run: |
-          echo ${{ steps.meta.outputs.tags }}
+          tags: |
+            type=match,pattern=\d{6}\.\d+
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
