--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Python ${{ env.PYTHON_VERSION }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
@@ -52,64 +52,53 @@ jobs:
       - name: Run Tests
         run: |
           python -Wa manage.py test --noinput --failfast comicagg.comics
-      # - name: Build the Docker image
-        # run: docker build . --file Dockerfile
-      # Set up BuildKit Docker container builder to be able to build
-      # multi-platform images and export cache
-      # https://github.com/docker/setup-buildx-action
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+        uses: docker/setup-buildx-action@v3
 
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.REGISTRY_USER }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
+      - name: Extract metadata for Docker images
+        id: image-metadata
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.APP_IMAGE_NAME }}
           tags: |
             type=match,pattern=\d{6}\.\d+
 
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build and push app image
+      - name: Build and push APP
         id: build-and-push
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          # tags: ${{ steps.meta.outputs.tags }}
-          tags: ${{ env.REGISTRY }}/${{ env.APP_IMAGE_NAME }}:test
-          # labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.image-metadata.outputs.tags }}
+          # tags: ${{ env.REGISTRY }}/${{ env.APP_IMAGE_NAME }}:test
+          # labels: ${{ steps.image-metadata.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Collect static files and prepare nginx image
+      - name: Collect static files and prepare PROXY image
         run: |
           mkdir -p $DJANGO_STATIC_ROOT
-          python manage.py collectstatic --noinput -v 2
+          python manage.py collectstatic --noinput
           ls -l /tmp/nginx/static/
           cp ../deployment/nginx/* /tmp/nginx/
 
-      - name: Build and push proxy image
+      - name: Build and push PROXY image
         id: build-and-push-nginx
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        uses: docker/build-push-action@v5
         with:
           context: /tmp/nginx/
           push: ${{ github.event_name != 'pull_request' }}
-          # tags: ${{ steps.meta.outputs.tags }}
-          tags: ${{ env.REGISTRY }}/${{ env.PROXY_IMAGE_NAME }}:test
-          # labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.image-metadata.outputs.tags }}
+          # tags: ${{ env.REGISTRY }}/${{ env.PROXY_IMAGE_NAME }}:test
+          # labels: ${{ steps.image-metadata.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
