--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{json,yml}]
+[*.{json,yml,html}]
 indent_size = 2
 
 [*.md]
