--- a/.devcontainer/dev.env
+++ b/.devcontainer/dev.env
@@ -11,6 +11,7 @@ DJANGO_STATIC_ROOT=/tmp/static/
 
 DJANGO_ALLOWED_HOSTS=localhost
 DJANGO_SITE_DOMAIN=http://localhost:8001
+DJANGO_PASSWORD_RESET_TIMEOUT=900
 
 DJANGO_EMAIL_HOST=//comicagg:comicagg@mail:1025
 DJANGO_EMAIL_USE_TLS=0
