--- a/deployment/example.env
+++ b/deployment/example.env
@@ -13,6 +13,7 @@ DJANGO_STATIC_URL=/.static/
 DJANGO_ALLOWED_HOSTS=www.comicagg.com,localhost
 DJANGO_CSRF_TRUSTED_ORIGINS=https://www.comicagg.com
 DJANGO_SITE_DOMAIN=https://www.comicagg.com
+DJANGO_PASSWORD_RESET_TIMEOUT=900
 
 DJANGO_EMAIL_HOST=//comicagg:comicagg@smtp
 DJANGO_EMAIL_USE_TLS=1
