Updated dev files

--- a/.devcontainer/dev.env
+++ b/.devcontainer/dev.env
@@ -35,4 +35,4 @@ PGADMIN_LISTEN_PORT=8081
 
 MP_SMTP_AUTH_ACCEPT_ANY=1
 MP_SMTP_AUTH_ALLOW_INSECURE=1
-MP_UI_AUTH=comicagg:comicagg
+MP_UI_AUTH=dev:dev
