--- a/deployment/app.env
+++ b/deployment/app.env
@@ -1,5 +1,5 @@
 # This is just an example of all the environment variables needed
-DJANGO_DEBUG=1
+DJANGO_DEBUG=0
 DJANGO_MAINTENANCE=0
 
 DJANGO_SECRET_KEY=0zqsc45e!e*%zy(&gus5p4bj6^mdrt%7^y*fl*(o6rt1yp=)&#
@@ -11,7 +11,7 @@ DJANGO_STATIC_ROOT=/web/static/
 DJANGO_STATIC_URL=/.static/
 
 DJANGO_ALLOWED_HOSTS=www.comicagg.com,localhost
-DJANGO_CSRF_TRUSTED_ORIGINS=https://www.comicagg.com
+DJANGO_CSRF_TRUSTED_ORIGINS=https://www.comicagg.com,http://localhost:4000
 DJANGO_SITE_DOMAIN=https://www.comicagg.com
 DJANGO_PASSWORD_RESET_TIMEOUT=900
 
