--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,8 @@
         "jgclark.vscode-todo-highlight",
         "Gruntfuggly.todo-tree",
         "tushortz.python-extended-snippets",
+        "ms-python.python",
+        "ms-python.debugpy",
         "ms-python.isort",
         "twixes.pypi-assistant",
         "batisteo.vscode-django",
@@ -44,7 +46,7 @@
   // Configure tool-specific properties.
   // "customizations": {},
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-  "remoteUser": "root",
+  // "remoteUser": "root",
   "mounts": [
     "source=profile,target=/root,type=volume",
     "target=/root/.vscode-server,type=volume"
